--- a/src/main/resources/assets/dialog/lang/zh_cn.json
+++ b/src/main/resources/assets/dialog/lang/zh_cn.json
@@ -13,9 +13,13 @@
   "dialog.ui.continue": "继续",
   "dialog.ui.back": "返回",
   "dialog.ui.exit": "退出",
+  "dialog.ui.auto_play": "自动播放",
+  "dialog.ui.history": "历史记录",
+  "dialog.ui.esc": "关闭对话",
+  "dialog.ui.confirm_esc": "您确定要退出当前对话吗？",
   
   "dialog.manager.loading": "正在加载对话文件，路径: %s",
-  "dialog.manager.files_found": "找到 §r§6%s§r 个对话文件",
+  "dialog.manager.files_found": "找到 %s 个对话文件",
   "dialog.manager.sequence_loaded": "成功加载对话序列: %s",
   "dialog.manager.sequence_empty": "对话序列为空或ID为空: %s",
   "dialog.manager.load_failed": "加载对话文件失败 %s: %s",
