--- a/src/main/resources/assets/dialog/lang/zh_cn.json
+++ b/src/main/resources/assets/dialog/lang/zh_cn.json
@@ -18,6 +18,7 @@
   "dialog.ui.esc": "关闭对话",
   "dialog.ui.confirm_esc": "您确定要退出当前对话吗？",
   
+  "dialog.manager.requesting_from_server": "本地未找到对话文件，正在试图从服务器请求...",
   "dialog.manager.loading": "正在加载对话文件，路径: %s",
   "dialog.manager.files_found": "找到 %s 个对话文件",
   "dialog.manager.sequence_loaded": "成功加载对话序列: %s",
