feat(对话框): 添加生存模式下可见的隐藏选项
在 test_dialog.json 中添加了一个仅对生存模式玩家可见的隐藏选项，并在中英文语言文件中添加了相应的翻译文本

--- a/src/main/resources/assets/dialog/lang/en_us.json
+++ b/src/main/resources/assets/dialog/lang/en_us.json
@@ -60,6 +60,7 @@
 
   "dialog.test_dialog.option.more_info": "Learn more about the dialog system",
   "dialog.test_dialog.option.end_dialog": "End dialog",
+  "dialog.test_dialog.option.hidden_option": "Hidden option, only visible to players in survival mode",
   "dialog.test_dialog.option.weather_rain": "Set weather to rain",
   "dialog.test_dialog.option.weather_clear": "Set weather to clear",
   "dialog.test_dialog.option.weather_thunder": "Set weather to thunder"
