--- a/src/main/resources/assets/dialog/lang/zh_cn.json
+++ b/src/main/resources/assets/dialog/lang/zh_cn.json
@@ -61,6 +61,7 @@
   "dialog.test_dialog.entry.item.text": "可以在对话框上方自定义渲染的物品，包括NBT和数量。",
   "dialog.test_dialog.entry.end.text": "感谢使用本模组！使用/dialog show test_dialog命令可以再次打开这个对话。",
   "dialog.test_dialog.entry.hidden_entry.text": "这是一个隐藏条件对话，只有生存模式下的玩家可见",
+  "dialog.test_dialog.entry.background_cg.text":"也可以在对话背景中添加自定义的图片用作CG",
 
   "dialog.test_dialog.option.more_info": "了解更多关于对话系统的信息",
   "dialog.test_dialog.option.end_dialog": "结束对话",
